Changed home state

--- a/app.less
+++ b/app.less
@@ -4,6 +4,8 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
+@import "app/states/home/home.less";
+@import "app/states/after-school-programs/after-school-programs.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
